[package]
name = "cut-optimizer-2d-web"
version = "0.1.0"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A cut optimizer for cutting rectangular pieces from sheet goods"
repository = "https://github.com/jasonrhansen/cut-optimizer-2d-web.git"
keywords = ["cuts", "optimize", "optimization", "bin-packing", "bin-packer"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
cut-optimizer-2d = { version = "0.1.0", features = ["serialize"] }
serde = "^1.0.59"
serde_derive = "^1.0.59"
js-sys = "0.3.20"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.5"
